--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@
                    <h1>lilcomputernerd</h1>
                     
                      <div id='left-sidebar'>
-                              Everything Crypto </p>
+                             <p> Everything Crypto </p>
                  <a href="http://5d72ccu51j1sml54l3qd4y1tew.hop.clickbank.net/?tid=STHOMP17" target="_blank">
   <img src='sthomp18.github.io/images/marshmellow.jpeg' height='600' width='155'>
                       </a>     </div>
          </div>
          
          <div id='right-sidebar'>
+                  <p>Art</p>
           <a href='https://www.amazon.com/gp/product/B005C7VGYA/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=buffoon-20&creative=9325&linkCode=as2&creativeASIN=B005C7VGYA&linkId=5429c50e6d16a3868df43c9023774ac0'>        
          <img src='sthomp18.github.io/images/koi-fish-dragon-gate-illustration-according-asian-myth-golden-carp-which-trying-to-reach-top-waterfall-tattoo-style-104387984.jpg' 
              width='155' height='600' >
