--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     
                      <div id='left-sidebar'>
                      <a href="http://af2ecc7a-gwzhu5a5odqpffg41.hop.clickbank.net/?tid=STHOMP17/" 
-                         target="_blank">  <img src=''></a>       
+                         target="_blank">  <img src='' width='50' height='50' ALT='$$$'></a>       
   <img src='sthomp18.github.io/images/marshmellow.jpeg' height='600' width='155'>
                            </div>
          </div>
@@ -87,7 +87,7 @@
          <div id='right-sidebar'>
                   
           <a href='<a href="http://1e812r4617yynzbyte-hu1bhjx.hop.clickbank.net/?tid=STHOMP17/" target="_blank"> 
-                   <img src=''><a>       
+                   <img src='' width='50' height='50' ALT='ART'><a>       
          <img src='sthomp18.github.io/images/koi-fish-dragon-gate-illustration-according-asian-myth-golden-carp-which-trying-to-reach-top-waterfall-tattoo-style-104387984.jpg' 
              width='155' height='600' >
                         </div>    
