--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                              </li>
                       
                            <li><center><p>thankyou for visiting our site! If you want your song or product featured
-                               please contact through one of the social media linkslinks</p></center></li>
+                               please contact through one of the social media links</p></center></li>
                      </ul>
                  
 </footer>  
