--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                               </div></center>
          <center><p>Video of the day</p></center>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/xee_cGHTw8k" 
-        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/xee_cGHTw8k" 
+        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center>
 
 <center>  <div class='banner'>
                               <img class = "banner-image" src= "sthomp18.github.io/images/Fire-PNG-image.jpg"
