--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                      <a href="http://af2ecc7a-gwzhu5a5odqpffg41.hop.clickbank.net/?tid=STHOMP17/" 
                          target="_blank">  <img src='sthomp18.github.io/images/emoji©_office-043.jpg' width='50' height='50' ALT='$$$'></a>       
   <img src='sthomp18.github.io/images/marshmellow.jpeg' height='600' width='155'>
-                           </div>
+                        <Button><a href='https://sthomp18.github.io/shows.github.io/'>how is your day going?</a></Button>
          </div>
          
          <div id='right-sidebar'>
