--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
                 
          
     </ul>
-<body>
+<body background-color = 'black'>
         <div id="fb-root"></div>
-<script>(function(d, s, id) {
+      <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
   js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0';
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script> 
-<header>
-<title align= "center">Drippy</title>
+     }(document, 'script', 'facebook-jssdk'));</script> 
+   <header>
+   <title align= "center">Drippy</title>
            <meta name="author" content="Solomon Shamir Thompson">
            <meta name="description" content="how to make money online">
            <meta name="keywords" content= "lilcomputernerd, college, charity, rapbeefs">
