--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 
          
     </ul>
-<body background-color = 'black'>
+<body bgcolor = "black">
         <div id="fb-root"></div>
       <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
