--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
              width='155' height='600' >
                         </div>    
                     
-                   <center>  <div class='banner'>
+                   <center>  <div class='banner' bgcolor="black">
          <img class = "banner-image" src= "sthomp18.github.io/images/ll.jpg"
                     width= "600" height= "100" ALT='bossesrule'/>
                               </div></center>
