--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 
          
     </ul>
-<body bgimage "http://www.clipartbest.com/cliparts/ace/o7B/aceo7BKdi.gif">
+<body background-image=url(http://www.clipartbest.com/cliparts/ace/o7B/aceo7BKdi.gif/)>
         <div id="fb-root"></div>
       <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
