--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 
          
     </ul>
-<body background-image=url(http://www.clipartbest.com/cliparts/ace/o7B/aceo7BKdi.gif/)>
+<body background-image=<iframe src="https://giphy.com/embed/l41YoVcd7UhOWIDBK" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/loop-money-l41YoVcd7UhOWIDBK">via GIPHY</a></p>
         <div id="fb-root"></div>
       <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
