--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 
          
     </ul>
-<body background-image=<iframe src="https://giphy.com/embed/l41YoVcd7UhOWIDBK" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/loop-money-l41YoVcd7UhOWIDBK">via GIPHY</a></p>
+<body background-image= url(https://gph.is/1TZJt8L)>
         <div id="fb-root"></div>
       <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
