--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 
          
     </ul>
-<body background-image= url(https://media.giphy.com/media/l41YoVcd7UhOWIDBK/giphy.gif)>
+<body background-image= url(https://www.bing.com/th?id=OIP.UifatA2ZG0Ul0354DamOzAHaFf&pid=Api)>
         <div id="fb-root"></div>
       <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
