--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 font-family: ar berkley;
                               }
                    body {
-    background-image: url("https://giphy.com/gifs/loop-money-l41YoVcd7UhOWIDBK");
+    background-image: url("sthomp18.github.io/images/aceo7BKdi.gif");
 }
 
    </style>
