--- a/index.html
+++ b/index.html
@@ -202,8 +202,7 @@
                               height='50' width='50' ALT="twitter"></a></center>
                              </li>
                       
-                           <li><center><p>thankyou for visiting our site! If you want your song or product featured
-                               please contact through one of the social media links</p></center></li>
+                           <li><center><p>thankyou for visiting the site! </p></center></li>
                      </ul>
                  
 </footer>  
