--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link href= 'sthomp18.github.io/style.css' rel= 'stylesheet'>
 
          <ul>
-         <li><button><img src="sthomp18.github.io/images/emoji©_objects-024-4.jpg"
+         <li><button><img src="sthomp18.github.io/images/dollar-signs-and-cash-smiley-emoticon.gif"
                           width="150" height="50" ALT="investments"/></button>
                 <ul>
                          <li><a href="http://ratepro.co/?header=Compare+the+Best+Bank+Accounts+of+2018&eng=b&device=c&utm_term=bank&utm_campaign=%5BSearch%5D%20%2F%20%5BBank%5D%20-%20(Desktop)%20%20-%20%244%20CPA%20Tog_Sav&utm_source=bing&utm_medium=cpc&cid=328210307&aid=1145691365844280&network=o&kid=kwd-71605982307410:loc-4125&matchtype=e&msclkid=fed4fc8f26a2119056a1a67fbd77cbe7&utm_content=Banking%20%20-%20%20%5BMain%5D%20%5BExact%5D/" target="_blank">
