--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                               </div></center>
          <center><p>Game of the day</p></center>
 
-<center><iframe width='550' height='550' frameborder='0' scrolling='no' src='https://www.yiv.com/games/Master-Chess/index.html'></iframe></center>
+<center><iframe src="http://www.silvergames.com/en/monopoly-io/iframe" width="600" height="400" style="margin:0;padding:0;border:0"></iframe></center>
 
 <center>  <div class='banner'>
                               <img class = "banner-image" src= "sthomp18.github.io/images/Fire-PNG-image.jpg"
