--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
                               </div></center>
          <center><p>Game of the day</p></center>
 
-<center><iframe src="http://www.silvergames.com/en/monopoly-io/iframe" width="600" height="400" style="margin:0;padding:0;border:0"></iframe></center>
+<center><iframe src="http://www.silvergames.com/en/monopoly-io/iframe" width="1000" height="600" style="margin:0;padding:0;border:0"></iframe>
+</center>
 
 <center>  <div class='banner'>
                               <img class = "banner-image" src= "sthomp18.github.io/images/Fire-PNG-image.jpg"
