--- a/index.html
+++ b/index.html
@@ -164,8 +164,11 @@
                               </div></center>
          <center><p>Game of the day</p></center>
 
-<center><iframe src="http://www.silvergames.com/en/monopoly-io/iframe" width="1000" height="600" style="margin:0;padding:0;border:0"></iframe>
-</center>
+<center><!-- Hey Webmaster! Place this html code where you'd like the game to appear. -->
+<iframe src="http://www.silvergames.com/en/monopoly-io/iframe" width="1000" height="600" style="margin:0;padding:0;border:0"></iframe>
+<p style="text-align:center">More <a href="https://www.silvergames.com/en/">online games</a> on Silvergames.com</p>
+<!-- End of game embed code -->
+    </center>
 
 <center>  <div class='banner'>
                               <img class = "banner-image" src= "sthomp18.github.io/images/Fire-PNG-image.jpg"
