--- a/index.html
+++ b/index.html
@@ -164,12 +164,8 @@
                               </div></center>
          <center><p>Game of the day</p></center>
 
-<center><!-- Hey Webmaster! Place this html code where you'd like the game to appear. -->
-<iframe src="http://www.silvergames.com/en/monopoly-io/iframe" width="1000" height="600" style="margin:0;padding:0;border:0"></iframe>
-<p style="text-align:center">More <a href="https://www.silvergames.com/en/">online games</a> on Silvergames.com</p>
-<!-- End of game embed code -->
     </center>
-
+<iframe height="540" width="960" src="http://static.arcadespot.com/embed/monopoly-online/" border="0" frameborder="0" scrolling="no"></iframe>
 <center>  <div class='banner'>
                               <img class = "banner-image" src= "sthomp18.github.io/images/Fire-PNG-image.jpg"
                     width= "600" height= "100" ALT='bossesrule'/>
