--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                    <img src='sthomp18.github.io/images/emoji_celebs_299-1.jpg' width='50' height='50' ALT='ART'><a>       
          <img src='sthomp18.github.io/images/koi-fish-dragon-gate-illustration-according-asian-myth-golden-carp-which-trying-to-reach-top-waterfall-tattoo-style-104387984.jpg' 
              width='155' height='600' >
-                       <button><a href="https://sthomp18.github.io/games.github.io/">whats up?</a></button>
+                       <button><a href="https://sthomp18.github.io/games.github.io/" target="_blank">whats up?</a></button>
                    </div>    
                     
                    <center>  <div class='banner' bgcolor="black">
