--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                      <a href="http://af2ecc7a-gwzhu5a5odqpffg41.hop.clickbank.net/?tid=STHOMP17/" 
                          target="_blank">  <img src='sthomp18.github.io/images/emoji©_office-043.jpg' width='50' height='50' ALT='$$$'></a>       
   <img src='sthomp18.github.io/images/marshmellow.jpeg' height='600' width='155'>
-                        <Button><a href='https://sthomp18.github.io/shows.github.io/'>🛩️</a></Button>
+                        <a href='https://sthomp18.github.io/shows.github.io/'>🛩️</a>
          </div>
          
          <div id='right-sidebar'>
@@ -107,7 +107,7 @@
                    <img src='sthomp18.github.io/images/emoji_celebs_299-1.jpg' width='50' height='50' ALT='ART'><a>       
          <img src='sthomp18.github.io/images/koi-fish-dragon-gate-illustration-according-asian-myth-golden-carp-which-trying-to-reach-top-waterfall-tattoo-style-104387984.jpg' 
              width='155' height='600' >
-                       <button><a href="https://sthomp18.github.io/games.github.io/" >🏄</a></button>
+                       <a href="https://sthomp18.github.io/games.github.io/" >🏄</a>
                    </div>    
                     
                    <center>  <div class='banner' bgcolor="black">
