--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0';
   fjs.parentNode.insertBefore(js, fjs);
      }(document, 'script', 'facebook-jssdk'));</script> 
-   <header>
+   <head>
    <title align= "center">Drippy</title>
            <meta name="author" content="Solomon Shamir Thompson">
            <meta name="description" content="how to make money online">
@@ -87,7 +87,7 @@
 
    </style>
                     
-         </header>
+         </head>
          
 <body>         
                    <h1><div class="fb-share-button" data-href="https://www.lilcomputernerd.tk" data-layout="button" data-size="small" 
