--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
   fjs.parentNode.insertBefore(js, fjs);
      }(document, 'script', 'facebook-jssdk'));</script> 
    <head>
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-9521486387467206",
+    enable_page_level_ads: true
+  });
+</script>
+            
    <title align= "center">Drippy</title>
            <meta name="author" content="Solomon Shamir Thompson">
            <meta name="description" content="how to make money online">
