--- a/index.html
+++ b/index.html
@@ -117,10 +117,9 @@
           <a href="http://91b6cfug182yhlf23qsz0fbn6i.hop.clickbank.net/?tid=STHOMP17/" target="_blank"> 
                    <img src='sthomp18.github.io/images/emoji_celebs_299-1.jpg' width='50' height='50' ALT='ART'><a>       
         
-                   <p>Click on photo below for Contracting Templates</p>
                    <a href='https://www.pandadoc.com/standard-business-document-templates/' target='_blank'>
                  <img src='sthomp18.github.io/images/contract_transform.gif' 
-             width='155' height='200'></a>
+             width='155' height='200'>Contract Templates</a>
                        
                    <a href="https://sthomp18.github.io/games.github.io/" >🏄</a>
                    </div>    
