--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link href= 'sthomp18.github.io/style.css' rel= 'stylesheet'>
+         <script type='text/javascript' src='sthomp18.github.io/jquery.js'></script>
 
          <ul>
          <li><button><img src="sthomp18.github.io/images/dollar-signs-and-cash-smiley-emoticon.gif"
