--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
         <div class="cube-image">2</div>
       </div>
       <div class="side">
-        <div class="cube-image">3</div>
+        <div class="cube-image" img src="sthomp18.github.io/images/mansion_and_ferrari_w1.jpeg"">3</div>
       </div>
       <div class="side">
-        <div class="cube-image">4</div>
+        <div class="cube-image" img src="sthomp18.github.io/images/3d cars wallpapers (1).jpg">4</div>
       </div>
       <div class="side">
         <div class="cube-image">5</div>
       </div>
-      <div class="side">
-        <div class="cube-image active">7</div>
+      <div class="side"> 
+        <div class="cube-image" img src="sthomp18.github.io/images/Polar-Bears-Pictures.jpg">7</div>
       </div>
     </div>
   </div>
