--- a/index.html
+++ b/index.html
@@ -158,17 +158,17 @@
       <div class="side">
         <div class="cube-image">2</div>
       </div>
-      <div class="side">
-        <div class="cube-image" img src="sthomp18.github.io/images/mansion_and_ferrari_w1.jpeg"">3</div>
+      <div class="side"><a href='https://fineartamerica.com/art/paintings/'>
+        <div class="cube-image" img src="sthomp18.github.io/images/mansion_and_ferrari_w1.jpeg" target='_blank'>3</a></div>
       </div>
-      <div class="side">
-        <div class="cube-image" img src="sthomp18.github.io/images/3d cars wallpapers (1).jpg">4</div>
+      <div class="side"><a href='https://www.epicgames.com/'>
+        <div class="cube-image" img src="sthomp18.github.io/images/3d cars wallpapers (1).jpg" target='_blank'>4</a></div>
       </div>
       <div class="side">
         <div class="cube-image">5</div>
       </div>
-      <div class="side"> 
-        <div class="cube-image" img src="sthomp18.github.io/images/Polar-Bears-Pictures.jpg">7</div>
+      <div class="side"><a href='https://www.worldwildlife.org/species/polar-bear/'>
+        <div class="cube-image" img src="sthomp18.github.io/images/Polar-Bears-Pictures.jpg" target='_blank'>7</a></div>
       </div>
     </div>
   </div>
