--- a/index.html
+++ b/index.html
@@ -130,10 +130,7 @@
                    <a href="https://sthomp18.github.io/games.github.io/" >🏄</a>
                    </div>    
                     
-                   <center>  <div class='banner'>
-         <img class = "banner-image" src= "sthomp18.github.io/images/ll.jpg"
-                    width= "600" height= "100" ALT='bossesrule'/>
-                              </div></center>
+                  <iframe src="https://giphy.com/embed/FY9chKp6rulXy" width="580" height="197" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/galaxy-space-FY9chKp6rulXy">via GIPHY</a></p>
                    
               <center>   <iframe src="https://giphy.com/embed/8ctbyl3m1Un3q" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p>
                    <a href="https://giphy.com/gifs/money-telephone-scarface-8ctbyl3m1Un3q">via GIPHY</a></p></center>
