--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
                     h1        {
                                 font-family: ar berkley;
                               }
-                   body {
+                   body {   background-image:url("sthomp18.github.io/images/ws_Stars_in_Outer_Space_1920x1080.jpg");
+                            
+                    }
    
                            
 }
