--- a/index.html
+++ b/index.html
@@ -90,7 +90,24 @@
                     h1        {
                                 font-family: ar berkley;
                               }
-                   body {   background-image:url("sthomp18.github.io/images/ws_Stars_in_Outer_Space_1920x1080.jpg");
+                   body {   
+                            padding: 0 8px;
+padding-top: 8px;
+padding-right: 8px;
+padding-bottom: 8px;
+padding-left: 8px;
+overflow: hidden;
+zoom: 1;
+text-align: left;
+font-size: 13px;
+font-family: "Trebuchet MS",Arial,Sans;
+line-height: 24px;
+color: black;
+border-bottom: solid 1px #BBB;
+background-color: white;
+background-image: url('sthomp18.github.io/images/ws_Stars_in_Outer_Space_1920x1080.jpg');
+background-repeat-x: no-repeat;
+background-repeat-y: no-repeat;
                             
                     }
    
