--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@ background-repeat-y: no-repeat;
                    <a href="https://sthomp18.github.io/games.github.io/" >🏄</a>
                    </div>    
                     
-                  <img src="sthomp18.github.io/images/giphy.gif" width="580" height="197">
+                   <div class='banner'>
+                  <<img class = "banner-image" src="sthomp18.github.io/images/giphy.gif" width="580" height="197">
+                            </div>
                    
               <center>   <iframe src="https://giphy.com/embed/8ctbyl3m1Un3q" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p>
                    <a href="https://giphy.com/gifs/money-telephone-scarface-8ctbyl3m1Un3q">via GIPHY</a></p></center>
