--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ background-repeat-y: no-repeat;
                    </div>    
                     
                    <div class='banner'>
-                  <<img class = "banner-image" src="sthomp18.github.io/images/giphy.gif" width="580" height="197">
+                  <img class = "banner-image" src="sthomp18.github.io/images/giphy.gif" width="580" height="197">
                             </div>
                    
               <center>   <iframe src="https://giphy.com/embed/8ctbyl3m1Un3q" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p>
