--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
          <li><button><img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
                           width="150" height="50" ALT="login"/></button>
                   <ul>
-                   <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-                    <li><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></li>
-                    <li><a href="https://www.pinterest.com/" target="_blank">Pinterest</a></li>
-                    <li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
+                  <button> <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li></button>
+                    <button><li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li></button>
+                    <button><li><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></li></button>
+                    <button><li><a href="https://www.pinterest.com/" target="_blank">Pinterest</a></li></button>
+                  <button><li><a href="https://twitter.com/" target="_blank">Twitter</a></li></button>
          </ul></li>
         
              
