--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
       
       <li><button><img src="sthomp18.github.io/images/emoji_celebs_148-1.jpg"
                           width="150" height="50" ALT="books" /></button>
-               <ul>
+             <button>  <ul>
                         <li><a href="https://www.pandora.com/" target="_blank">Pandora</a></li> 
                         <li><a href="https://www.reverbnation.com/" target="_blank">Reverbnation</a></li>
                         <li><a href="https://soundcloud.com/" target="_blank">Soundcloud</a></li>
                         <li><a href="https://www.spotify.com/" target="_blank">Spotify</a></li>
                         <li><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
-         </ul></li>
+         </ul></button></li>
              
          <li><button><img src="sthomp18.github.io/images/emoji_celebs_293-1.jpg"
                           width="150" height="50" ALT="login"/></button>
