--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@ background-image: url('sthomp18.github.io/images/ws_Stars_in_Outer_Space_1920x10
                        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.lilcomputernerd.tk%2F&amp;src=sdkpreparse" 
                                                          +class="fb-xfbml-parse-ignore">Share</a></div></h1>
                     
-         <div class='banner'>
+      <center>   <div class='banner'>
                   <img class = "lit-image" src="sthomp18.github.io/images/giphy.gif" width="1580" height="197">
-                            </div>
+                            </div> </center>
          
                      <div id='left-sidebar'>
                      <a href="http://af2ecc7a-gwzhu5a5odqpffg41.hop.clickbank.net/?tid=STHOMP17/" 
