--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ background-image: url('sthomp18.github.io/images/ws_Stars_in_Outer_Space_1920x10
         <div class="cube-image">5</div>
       </div>
       <div class="side">
-        <div class="cube-image active"><img src='sthomp18.github.io/images/shutterstock_688113943.jpg' width='200' height='200'>6</div>
+        <div class="cube-image active"><img src='sthomp18.github.io/images/th.jpg' width='200' height='200'>6</div>
       </div>
     </div>
   </div>
