--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@ background-image: url('sthomp18.github.io/images/ws_Stars_in_Outer_Space_1920x10
         <div class="cube-image">2</div>
       </div>
       <div class="side">
-        <div class="cube-image">3</div>
+        <div class="cube-image"><img src='sthomp18.github.io/images/iphone-text-message-bubble-icon_633713.jpg' width='200' height='200'>3</div>
       </div>
       <div class="side">
-        <div class="cube-image">4</div>
+        <div class="cube-image"><img src='sthomp18.github.io/images/Polar_Bear_Underwater_Close-Up_600.jpg' width='200' height='200'>4</div>
       </div>
       <div class="side">
         <div class="cube-image">5</div>
