--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ background-image: url('sthomp18.github.io/images/ws_Stars_in_Outer_Space_1920x10
         <div class="cube-image"><a href='https://sthomp18.github.io/shows.github.io/'><img src='sthomp18.github.io/images/iphone-text-message-bubble-icon_633713.jpg' width='200' height='200'></a>3</div>
       </div>
       <div class="side">
-        <div class="cube-image"><a href='https://www.worldwildlife.org/species/polar-bear/'><img src='sthomp18.github.io/images/Polar_Bear_Underwater_Close-Up_600.jpg' width='200' height='200'></a>4</div>
+        <div class="cube-image"><a href='https://www.worldwildlife.org/species/polar-bear/' target='_blank'><img src='sthomp18.github.io/images/Polar_Bear_Underwater_Close-Up_600.jpg' width='200' height='200'></a>4</div>
       </div>
       <div class="side">
         <div class="cube-image">5</div>
