--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ background-image: url('sthomp18.github.io/images/ws_Stars_in_Outer_Space_1920x10
 </div></center>
           
           <!-- begin wwww.htmlcommentbox.com -->
-<center> <button><div id="HCB_comment_box" height='200' width='1000'><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
+<center> <button><div id="HCB_comment_box" height='200px' width='1000px'><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/skeleton/skin.css" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%242jlYMWXlPkcm5jejL9fSM%2F"+"&opts=16862&num=10&ts=1532736082314");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 </button></center>
