--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                               }
                    body {   
                            
-background-image: url('sthomp18.github.io/images/ws_Stars_in_Outer_Space_1920x1080.jpg');
+background-image: url('sthomp18.github.io/images/giphy (1).gif');
 
                             
                     }
