--- a/index.html
+++ b/index.html
@@ -92,8 +92,12 @@
                               }
                    body {   
                            
-background-image: url('sthomp18.github.io/images/giphy (1).gif'); 
-                            background-repeat: no-repeat;
+background-image: url('sthomp18.github.io/images/giphy (1).gif')  no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+                            
 
                   }
    
