--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
                     h1        {
                                 font-family: ar berkley;
                               }
-                   body {   
+                    
                            
-background-image: url('sthomp18.github.io/images/giphy (1).gif')  no-repeat center center fixed; 
+background-image: {
+         url(sthomp18.github.io/images/giphy (1).gif)  no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
