--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     
                     body{       
 background-image: 
-         url('sthomp18.github.io/images/giphy.gif');
+         url('sthomp18.github.io/images/giphy (3).gif');
                             
 
                   }
