--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ background-image:
                              
                   <ul>
                              <li>
-                  <center><a href= 'https://www.instagram.com/lilcomputernerd/' target="_blank">
+                  <center><a href= 'https://www.instagram.com/diamondrolls/' target="_blank">
                              <img src='sthomp18.github.io/images/fh.jpg' 
                               height='50' width='50' ALT="instagram"></a></center>
                              </li>
