--- a/index.html
+++ b/index.html
@@ -106,10 +106,7 @@ background-image:
          </head>
          
 <body>         
-                   <h1><div class="fb-share-button" data-href="https://www.lilcomputernerd.tk" data-layout="button" data-size="small" 
-                            data-mobile-iframe="true"><a target="_blank" 
-                       href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.lilcomputernerd.tk%2F&amp;src=sdkpreparse" 
-                                                         +class="fb-xfbml-parse-ignore">Share</a></div></h1>
+                   <h1><button class="_5f5mN       jIbKX  _6VtSN     yZn4P   ">Follow us on instagram</button></h1>
                     
       <center>   <div class='banner'>
                   <img class = "lit-image" src="sthomp18.github.io/images/giphy (2).gif" width="950" height="197">
