--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link href= 'sthomp18.github.io/style.css' rel= 'stylesheet'>
-         <script type='text/javascript' src='sthomp18.github.io/jquery.js'></script>
+         <script language="javascript" typr="text/javascript" src="https://codepen.io/jordizle/pen/haIdo?editors=0010#0"></script>
 
          <ul>
          <li><button><img src="sthomp18.github.io/images/dollar-signs-and-cash-smiley-emoticon.gif"
