--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
            <meta name="google-site-verification" content="VrV3FJ_c0ff2OBwjVn2r0vdYJdcWEYke-XnUMS2Nh5c" />
            <link href= 'sthomp18.github.io/style.css' rel= 'stylesheet'>
          <script language="javascript" type="text/javascript" src="https://codepen.io/jordizle/pen/haIdo?editors=0010#0"></script>
-         <script language= "javascript" type="text/javascript" src=""></script>
+         <script language= "javascript" type="text/javascript" src="sthomp18.github.io/sthomp18.js"></script>
             img           { 
                           display:block; margin-left: 
                               auto; margin-right: auto;
