--- a/index.html
+++ b/index.html
@@ -146,22 +146,22 @@ background-image:
   <div class="viewport">
     <div class="cube">
       <div class="side">
-        <div class="cube-image"><a href='https://sthomp18.github.io/playboy/'><img src='sthomp18.github.io/images/ioi.gif/' width='200' height='200' ALT='ART'></a>1</div>
+        <div class="cube-image"><a href='https://sthomp18.github.io/playboy/'><img src='sthomp18.github.io/images/ioi.gif' width='200' height='200' ALT='ART'></a>1</div>
       </div>
       <div class="side">
-        <div class="cube-image"><a href='https://sthomp18.github.io/fitness.io/'><img src='sthomp18.github.io/images/Healthy-Food-Pyramid.jpg/' width='200' height='200' ALT='ART'></a>2</div>
+        <div class="cube-image"><a href='https://sthomp18.github.io/fitness.io/'><img src='sthomp18.github.io/images/Healthy-Food-Pyramid.jpg' width='200' height='200' ALT='ART'></a>2</div>
       </div>
       <div class="side">
-        <div class="cube-image"><a href='https://sthomp18.github.io/shows.github.io/'><img src='sthomp18.github.io/images/iphone-text-message-bubble-icon_633713.jpg/' width='200' height='200'></a>3</div>
+        <div class="cube-image"><a href='https://sthomp18.github.io/shows.github.io/'><img src='sthomp18.github.io/images/iphone-text-message-bubble-icon_633713.jpg' width='200' height='200'></a>3</div>
       </div>
       <div class="side">
-        <div class="cube-image"><a href='https://www.worldwildlife.org/species/polar-bear/' target='_blank'><img src='sthomp18.github.io/images/Polar_Bear_Underwater_Close-Up_600.jpg/' width='200' height='200'></a>4</div>
+        <div class="cube-image"><a href='https://www.worldwildlife.org/species/polar-bear/' target='_blank'><img src='sthomp18.github.io/images/Polar_Bear_Underwater_Close-Up_600.jpg' width='200' height='200'></a>4</div>
       </div>
       <div class="side">
-        <div class="cube-image"><a href='https://sthomp18.github.io/realestate/'><img src='sthomp18.github.io/images/contract_transform.gif/' width='200' height='200' ALT='ART'></a>  5</div>
+        <div class="cube-image"><a href='https://sthomp18.github.io/realestate/'><img src='sthomp18.github.io/images/contract_transform.gif' width='200' height='200' ALT='ART'></a>  5</div>
       </div>
       <div class="side">
-        <div class="cube-image active"><a href='https://sthomp18.github.io/games.github.io/'><img src='sthomp18.github.io/images/th.jpg/' width='200' height='200'></a>6</div>
+        <div class="cube-image active"><a href='https://sthomp18.github.io/games.github.io/'><img src='sthomp18.github.io/images/th.jpg' width='200' height='200'></a>6</div>
       </div>
     </div>
   </div>
