--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ background-image:
         <div class="cube-image"><a href='https://sthomp18.github.io/realestate/'><img src='sthomp18.github.io/images/contract_transform.gif' width='200' height='200' ALT='ART'></a>  5</div>
       </div>
       <div class="side">
-        <div class="cube-image active"><a href='https://sthomp18.github.io/games.github.io/'><img src='sthomp18.github.io/images/th.jpg' width='200' height='200'></a>6</div>
+        <div class="cube-image active"><a href='https://sthomp18.github.io/games.github.io/'><img src='sthomp18.github.io/images/giphy (2.0).gif' width='200' height='200'></a>6</div>
       </div>
     </div>
   </div>
