--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ background-image:
         <div class="cube-image"><a href='https://sthomp18.github.io/playboy/'><img src='sthomp18.github.io/images/ioi.gif' width='200' height='200' ALT='ART'></a>1</div>
       </div>
       <div class="side">
-        <div class="cube-image"><a href='https://sthomp18.github.io/fitness.io/'><img src='sthomp18.github.io/images/Healthy-Food-Pyramid.jpg' width='200' height='200' ALT='ART'></a>2</div>
+        <div class="cube-image"><a href='https://sthomp18.github.io/fitness.io/'><img src='sthomp18.github.io/images/giphy 1.0.gif' width='200' height='200' ALT='ART'></a>2</div>
       </div>
       <div class="side">
         <div class="cube-image"><a href='https://sthomp18.github.io/shows.github.io/'><img src='sthomp18.github.io/images/giphy.gif' width='200' height='200'></a>3</div>
