--- a/index.html
+++ b/index.html
@@ -140,22 +140,22 @@ background-image:
   <div class="viewport">
     <div class="cube">
       <div class="side">
-        <div class="cube-image"><a href='https://sthomp18.github.io/playboy/'><img src='sthomp18.github.io/images/ioi.gif' width='200' height='200' ALT='ART'></a>1</div>
+        <div class="cube-image"><a href='https://sthomp18.github.io/playboy/'><img src='sthomp18.github.io/images/ioi.gif' width='200px' height='200px' ALT='ART'></a>1</div>
       </div>
       <div class="side">
-        <div class="cube-image"><a href='https://sthomp18.github.io/fitness.io/'><img src='sthomp18.github.io/images/giphy 1.0.gif' width='200' height='200' ALT='ART'></a>2</div>
+        <div class="cube-image"><a href='https://sthomp18.github.io/fitness.io/'><img src='sthomp18.github.io/images/giphy 1.0.gif' width='200px' height='200px' ALT='ART'></a>2</div>
       </div>
       <div class="side">
-        <div class="cube-image"><a href='https://sthomp18.github.io/shows.github.io/'><img src='sthomp18.github.io/images/giphy.gif' width='200' height='200'></a>3</div>
+        <div class="cube-image"><a href='https://sthomp18.github.io/shows.github.io/'><img src='sthomp18.github.io/images/giphy.gif' width='200px' height='200px'></a>3</div>
       </div>
       <div class="side">
-        <div class="cube-image"><a href='https://www.worldwildlife.org/species/polar-bear/' target='_blank'><img src='https://yt3.ggpht.com/-nWax0RVq7Gc/AAAAAAAAAAI/AAAAAAAAAAA/1HFXLeX0lLk/s900-c-k-no-mo-rj-c0xffffff/photo.jpg' width='200' height='200'></a>4</div>
+        <div class="cube-image"><a href='https://www.worldwildlife.org/species/polar-bear/' target='_blank'><img src='https://yt3.ggpht.com/-nWax0RVq7Gc/AAAAAAAAAAI/AAAAAAAAAAA/1HFXLeX0lLk/s900-c-k-no-mo-rj-c0xffffff/photo.jpg' width='200px' height='200px'></a>4</div>
       </div>
       <div class="side">
-        <div class="cube-image"><a href='https://sthomp18.github.io/realestate/'><img src='sthomp18.github.io/images/contract_transform.gif' width='200' height='200' ALT='ART'></a>  5</div>
+        <div class="cube-image"><a href='https://sthomp18.github.io/realestate/'><img src='sthomp18.github.io/images/contract_transform.gif' width='200px' height='200px' ALT='ART'></a>  5</div>
       </div>
       <div class="side">
-        <div class="cube-image active"><a href='https://sthomp18.github.io/games.github.io/'><img src='sthomp18.github.io/images/giphy (2.0).gif' width='200' height='200'></a>6</div>
+        <div class="cube-image active"><a href='https://sthomp18.github.io/games.github.io/'><img src='sthomp18.github.io/images/giphy (2.0).gif' width='200px' height='200px'></a>6</div>
       </div>
     </div>
   </div>
