--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@ background-image:
     </div>
   </div>
 </div></center>
-        <center>  <img src="https://i.pinimg.com/564x/cd/95/86/cd958642f00e5082060ff6f15f282866.jpg" hight='700px'width='700px'/></center>
+        <center>  <img src="
+      sthomp18.github.io/images/city-buildings-png-transparent-images-clipart-icons-pngriver-download-free-building_PNG9.png
+    " hight='700px'width='700px'/></center>
 <script>
           var events = new Events();
 events.add = function(obj) {
