--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@ background-image:
     </div>
   </div>
 </div></center>
-        <center>  <img src="
+    <img src="
+      sthomp18.github.io/images/giphy (1).gif
+    " height='200' width='200'/>    <center>  <img src="
       sthomp18.github.io/images/city-buildings-png-transparent-images-clipart-icons-pngriver-download-free-building_PNG9.png
     " hight='700px'width='700px'/></center>
 <script>
