--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ amzn_assoc_asins = "B01M0F7C34,B06ZYQNLVV,B07D1R2PTD,B07FYBG1J1";
                                 }
                     p          {
                                font-size: 40px;
-                               color: #white;
+                               color: #FDEEF4;
                                 }
                     h1        {
                                 font-family: ar berkley;
