--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@ background-image:
             <center><a href= 'https://www.instagram.com/diamondrolls/' target="_blank">
                              <img src='sthomp18.github.io/images/fh.jpg' 
                               height='50' width='50' ALT="instagram"></a></center>
-          
+          <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=diamondrolls-20&marketplace=amazon&region=US&placement=B00U45YWNW&asins=B00U45YWNW&linkId=11e4518101a61b68154893ec06fe1b5d&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+    </iframe>
                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=diamondrolls-20&marketplace=amazon&region=US&placement=B07857NB1S&asins=B07857NB1S&linkId=fb1e024a5a97103e2268fcb78402e123&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
     </iframe>
                 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=diamondrolls-20&marketplace=amazon&region=US&placement=B01KXNCTM0&asins=B01KXNCTM0&linkId=23766aa7dbd2a95b6289b2c501a7bd05&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
