--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                               auto; margin-right: auto;
                                 }
                     p          {
-                               font-size: 40px;
+                               font-size: 12px;
                                color: #FDEEF4;
                                 }
                     h1        {
@@ -179,8 +179,8 @@ background-image:
       </div>
     </div>
   </div>
-</div></center>
-         <p>ROTATE THE CUBE</p>
+</div><p>ROTATE THE CUBE</p></center>
+         
        <center>  <img src="
       sthomp18.github.io/images/city-buildings-png-transparent-images-clipart-icons-pngriver-download-free-building_PNG9.png
     " hight='700px'width='700px'/></center>
