--- a/index.html
+++ b/index.html
@@ -179,10 +179,13 @@ background-image:
   </div>
 </div><p>ROTATE THE CUBE</p></center>
          
-       <center>  <img src="
+       <center><a href='https://play.google.com/store/apps/details?id=com.yottagames.mafiawar&referrer=af_tranid%3DVup05dALkl8USU9Te3vibw%26pid%3DFBShare%26c%3DNormal/'>  
+                <img src="
       sthomp18.github.io/images/city-buildings-png-transparent-images-clipart-icons-pngriver-download-free-building_PNG9.png
-    " hight='500px'width='500px'/></center>
-<script>
+    " hight='500px'width='500px'/><p>Mafia City App</p></a></center>
+
+         
+         <script>
           var events = new Events();
 events.add = function(obj) {
   obj.events = { };
