--- a/index.html
+++ b/index.html
@@ -187,20 +187,20 @@ background-image:
     " hight='500px'width='500px'/><p>Mafia City App</p></a>
       <div class= "awesomecontainer"/>
          <h2>Yea This Is A Site Of Fun</h2>
-         <button><p>Maybe if candy was around and easily accessed there would be less drug-
+         <p>Maybe if candy was around and easily accessed there would be less drug-
                   addicted kids.The cube is rotatable and leads to different pages of this site. 
                   Use it to navigate through the site. Our mission is to help people live well
                   and make sure everyone knows atleast the basics of living a healthy and 
                   fullfilling life. If you want your product or app on this sites home page 
-                  feel free to contact us at</p></button>
+                  feel free to contact us at</p>
          </div>
          
         <div class="awesomecontainer"/> 
     <img src='sthomp18.github.io/images/giphy blob.gif'hight='500px'width='500px'/>
         <h2>  </h2>
-         <button><p> send your dreams to our instagram and we will post it on our snack page.
+         <p> send your dreams to our instagram and we will post it on our snack page.
                   If you want your product or app on this sites home page feel free to contact 
-                  us at easymoneyinnotime@gmail.com</p></button>
+                  us at easymoneyinnotime@gmail.com</p>
          </center>
          </div>
          
