--- a/index.html
+++ b/index.html
@@ -182,9 +182,8 @@ background-image:
 </div><p>ROTATE THE CUBE</p>
          
        <a href='https://play.google.com/store/apps/details?id=com.yottagames.mafiawar&referrer=af_tranid%3DVup05dALkl8USU9Te3vibw%26pid%3DFBShare%26c%3DNormal/' target='_blank'>  
-                <img src="
-      sthomp18.github.io/images/city-buildings-png-transparent-images-clipart-icons-pngriver-download-free-building_PNG9.png
-    " hight='500px'width='500px'/><p>Mafia City App</p></a>
+                <img src="sthomp18.github.io/images/unnamed.jpg" 
+                     height='400px'width='500px'/><p>Mafia City App</p></a>
       <div class= "awesomecontainer"/>
          <h2>Yea This Is A Site Of Fun</h2>
          <p>Maybe if candy was around and easily accessed there would be less drug-
@@ -196,7 +195,7 @@ background-image:
          </div>
          
         <div class="awesomecontainer"/> 
-    <img src='sthomp18.github.io/images/giphy blob.gif'hight='500px'width='500px'/>
+    <img src='sthomp18.github.io/images/giphy blob.gif'height='500px'width='500px'/>
         <h2>  </h2>
          <p> send your dreams to our instagram and we will post it on our snack page.
                   If you want your product or app on this sites home page feel free to contact 
