--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@ background-image:
           <div id='left-sidebar'>
                   
                  <center> <img src="sthomp18.github.io/images/giphy (1).gif" height='50' width='50'/></center>
-                  
+                  <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=diamondrolls-20&marketplace=amazon&region=US&placement=B004G5Z1HM&asins=B004G5Z1HM&linkId=86b5e7414886ba76b80b0fc9a037214c&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+    </iframe>
                   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=diamondrolls-20&marketplace=amazon&region=US&placement=B011B45FZS&asins=B011B45FZS&linkId=fbee9fce61a5f453eeb8b25af5f6fc75&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
     </iframe>
                   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=diamondrolls-20&marketplace=amazon&region=US&placement=B0757Y9V47&asins=B0757Y9V47&linkId=799634df5ac63dfbd92367ac996add9c&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
