--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@ background-image:
             
          </div>    
                    <button><a href='https://noheartapparel.com/' target='_blank'>
-                        <center>  <img src='sthomp18.github.io/images/40683790_2138309002887339_1106618252462653440_n.png'>
+                        <center>  <img src='sthomp18.github.io/images/40683790_2138309002887339_1106618252462653440_n.png'
+                                       height='500px' width='500px'/>
                          <p>new no heart apparel </p></a></center>
                          <a href= 'https://www.instagram.com/noheartapparel/' target="_blank">
                            <center>  <img src='sthomp18.github.io/images/fh.jpg' 
