--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ background-image:
             height='400px'width='500px'/><p> New Mens Compression Sports Wear</p></a>
            
       <div class= "awesomecontainer"/>
-         <h2>Yea This Is A Site Of Fun</h2>
+         <h2>Healthy Living And Positivity</h2>
          <p>Maybe if candy was around and easily accessed there would be less drug-
                   addicted kids.The cube is rotatable and leads to different pages of this site. 
                   Use it to navigate through the site. Our mission is to help people live well
