--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ background-image:
                    <button><a href='https://noheartapparel.com/' target='_blank'>
                         <center>  <img src='sthomp18.github.io/images/40683790_2138309002887339_1106618252462653440_n.png'
                                        height='500px' width='500px'/>
-                         <p>new no heart apparel </p></a></center>
+                         <h1>NoHeartApparel </h1></a></center>
                          <a href= 'https://www.instagram.com/noheartapparel/' target="_blank">
                            <center>  <img src='sthomp18.github.io/images/fh.jpg' 
                               height='50' width='50' ALT="instagram"></a></center></button>                       
